--- a/README.rdoc
+++ b/README.rdoc
@@ -1,13 +1,4 @@
-Bakkuappu
-
-
-__________         __    __                                     
-\______   \_____  |  | _|  | ____ _______  ______ ______  __ __ 
- |    |  _/\__  \ |  |/ /  |/ /  |  \__  \ \____ \\____ \|  |  \
- |    |   \ / __ \|    <|    <|  |  // __ \|  |_> >  |_> >  |  /
- |______  /(____  /__|_ \__|_ \____/(____  /   __/|   __/|____/ 
-        \/      \/     \/    \/          \/|__|   |__|          
-
+== Bakkuappu
 
 == Features:
  * Reliable backups to AWS S3 using heroku's "pgbackup" FREE addon feature
